--- a/static/css/dispatch/daily_driving_print.css
+++ b/static/css/dispatch/daily_driving_print.css
@@ -1,451 +1,173 @@
 * {
-    list-style: none;
-    text-decoration: none;
+  list-style: none;
+  text-decoration: none;
 }
 
 html {
-    font-size: 62.5%;
-    font-family: "Noto Sans CJK KR";
-    overflow-x: hidden;
+  font-size: 62.5%;
+  font-family: "Noto Sans CJK KR";
+  overflow-x: hidden;
 }
 
 body {
-    margin: 0;
-    background-color: white;
+  font-family: "Noto Sans CJK KR", sans-serif;
+  font-size: 1.4rem;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #f9f9f9;
+  color: #333;
 }
 
-table {
-    border-spacing: 0;
+.containerfor{
+  page-break-after: always;
 }
 
-.a4ContainerFor{
-    width: 117rem;
-    height: 82rem;
-}
-.a4Container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 117rem;
-    min-height: 74rem;
-    height: auto;
-    max-height: 82rem;
-    padding: 2rem;
-    box-sizing: border-box;
+.container {
+  width: 100%;
+  max-width: 210mm;
+  padding: 2rem;
+  background-color: #f9f9f9;
+  border-radius: 0.8rem;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
-.drivingPrintHeader {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    width: 100%;
-    height: 7rem;
-    margin-bottom: 1rem;
+.title {
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 2rem;
+  height: 5rem;
+  line-height: 2.5;
 }
 
-.dayAndDriver {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    width: 40rem;
-    height: 100%;
+.info-table,
+.data-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 2rem;
 }
 
-.dayAndDriverTop,
-.dayAndDriverBottom {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+.info-table{
+  height: 20rem;
 }
 
-.dayAndDriverBottom {
-    margin-top: 0.6rem;
+.data-table{
+  height: 60rem;
 }
 
-.dataItemCell {
-    padding-bottom: 0.3rem;
-    border-bottom: 0.1rem solid #191919;
+.data-table{
+  height:1rem;
+}
+
+
+.info-table th,
+.info-table td,
+.data-table th,
+.data-table td {
+  border: 0.1rem solid #000;
+  text-align: center;
+  padding: 0.6rem;
+}
+
+.data-table td{
+      height: 5rem;
     font-size: 1.5rem;
-    font-weight: 500;
 }
 
-.dayAndDriverTop .dataItemCell:nth-child(1) {
-    width: 20rem;
+.info-table th {
+  background-color: #f2f2f2;
 }
 
-.dayAndDriverTop .dataItemCell:nth-child(2) {
-    width: 17rem;
+.notes {
+  margin-top: 2rem;
+  font-size: 1.2rem;
 }
 
-.dayAndDriverBottom .dataItemCell:nth-child(1) {
-    display: flex;
-    justify-content: space-between;
-    width: 23rem;
+.notes p {
+  margin: 0.5rem 0;
 }
 
-.dayAndDriverBottom .dataItemCell:nth-child(2) {
-    width: 14rem;
+input {
+  width: 100%;
+  border: none;
+  text-align: center;
+  font-size: 1.4rem;
+  padding: 0.4rem;
+  box-sizing: border-box;
+}
+
+.references textarea {
+  width: 100%;
+  border: 0.1rem solid #000;
+  text-align: left;
+  font-size: 1.4rem;
+  padding: 0.4rem;
+  box-sizing: border-box;
+  height: 5rem;
+  margin-top: 1rem;
+}
+
+.signLine {
+  font-weight: bold;
+  height: 1rem;
+  width: 1rem;
+}
+
+.headerTr td:nth-child(1) {
+  width: 50%;
+}
+
+.headerTr td:nth-child(2),
+.headerTr td:nth-child(3),
+.headerTr td:nth-child(4) {
+  width: 16%;
+}
+
+.subTr td:nth-child(1),
+.subTr td:nth-child(2),
+.subTr td:nth-child(3),
+.subTr td:nth-child(4) {
+  width: 12.5%;
+}
+
+.data-table td p {
+  text-align: left;
+}
+
+.data-table .references {
+  height: 10rem;
+  vertical-align: top;
+  margin-bottom: 1rem;
 }
 
 
-.drivingPrintTitle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: 3rem;
-    font-weight: 500;
-    letter-spacing: 0.5rem;
-    border-bottom: 0.2rem solid black;
-    margin-bottom: 2rem;
-    transform: translate(-50%, -50%);
+.data-tablemainth th:nth-child(1),
+.data-tablemainth th:nth-child(2){
+    width: 45%;
 }
 
-.adminTable {
-    width: 19%;
-    height: 100%;
-    text-align: center;
-    font-size: 1.3rem;
+.data-tablemainth th:nth-child(3){
+    width: 10%;
 }
 
-.adminTable tr:nth-child(1) {
-    background-color: #ddd;
-    height: 16%;
+.data-tablesubth th:nth-child(1),
+.data-tablesubth th:nth-child(4){
+    width: 23%
 }
 
-.adminTable tr:nth-child(2) {
-    height: 84%;
-}
-
-.adminTable tr:nth-child(1) td {
-    border-top: 0.1rem solid black;
-}
-
-.adminTable tr:nth-child(1) td:nth-child(1) {
+.data-tablesubth th:nth-child(3),
+.data-tablesubth th:nth-child(6){
     width: 12%;
-    border-left: 0.11rem solid black;
 }
 
-.adminTable td {
-    border-right: 0.11rem solid black;
-    border-bottom: 0.1rem solid black;
-}
-
-.tableHeightBox {
-    height: 4rem;
-}
-
-
-.startArea {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100%;
-    min-height: 12rem;
-    height: auto;
-    margin-bottom: 1rem;
-}
-
-.startBox {
-    width: 80%;
-    min-height: 100%;
-    height: auto;
-}
-
-.startCell {
-    display: flex;
-    min-height: 2.4rem;
-    height: 100%;
-    font-size: 1.3rem;
-}
-
-.startCell div {
-    border-right: 0.1rem solid black;
-    border-bottom: 0.1rem solid black;
-}
-
-.startCell div:nth-child(1) {
+.data-tablesubth th:nth-child(2),
+.data-tablesubth th:nth-child(5){
     width: 10%;
-}
-
-.startCell div:nth-child(2),
-.startCell div:nth-child(3) {
-    width: 35%;
-}
-
-.startCell div:nth-child(4) {
-    width: 20%;
-}
-
-.startCell span {
-    font-weight: 700;
-}
-
-.tableHeader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 0.1rem solid black;
-    background-color: #ddd;
-}
-
-.tableFirst {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-left: 0.1rem solid black;
-}
-
-.tableContents {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding-left: 0.6rem;
-    box-sizing: border-box;
-}
-
-.dataBox {
-    width: 19%;
-    min-height: 100%;
-    height: auto;
-    font-size: 1.3rem;
-}
-
-.dataCell {
-    display: flex;
-    width: 100%;
-    min-height: 2.4rem;
-    height: 100%;
-}
-
-.dataCell div {
-    border-right: 0.1rem solid black;
-    border-bottom: 0.1rem solid black;
-}
-
-.dataCellHeader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40%;
-    border-left: 0.1rem solid black;
-    background-color: #ddd;
-}
-
-.dataCellContents {
-    width: 60%;
-}
-
-.dataCellFirst {
-    border-top: 0.1rem solid black;
-}
-
-
-
-
-.endArea {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100%;
-    min-height: 12rem;
-    height: auto;
-    margin-bottom: 1rem;
-}
-
-.endBox {
-    width: 80%;
-    min-height: 100%;
-    height: auto;
-}
-
-.endCell {
-    display: flex;
-    min-height: 2.4rem;
-    height: 100%;
-    font-size: 1.3rem;
-}
-
-.endCell div {
-    border-right: 0.1rem solid black;
-    border-bottom: 0.1rem solid black;
-}
-
-.endCell div:nth-child(1) {
-    width: 10%;
-}
-
-.endCell div:nth-child(2),
-.endCell div:nth-child(3) {
-    width: 35%;
-}
-
-.endCell div:nth-child(4) {
-    width: 20%;
-}
-
-.endCell span {
-    font-weight: 700;
-}
-
-.noticeBox {
-    display: flex;
-    flex-direction: column;
-    width: 19%;
-    min-height: 12rem;
-    height: 100%;
-}
-
-.noticeBoxTitle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.3rem;
-    width: 100%;
-    height: 2.2rem;
-    border: 0.1rem solid black;
-    background-color: #ddd;
-}
-
-.noticeBoxContents {
-    width: 100%;
-    min-height: 9.5rem;
-    height: 100%;
-    border-left: 0.1rem solid black;
-    border-right: 0.1rem solid black;
-    border-bottom: 0.1rem solid black;
-}
-
-
-
-
-.orderBox {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    min-height: 12rem;
-    height: 100%;
-    margin-bottom: 1rem;
-}
-
-.orderCell {
-    display: flex;
-    min-height: 2.4rem;
-    height: 100%;
-    font-size: 1.3rem;
-}
-
-.orderCell div:nth-child(1) {
-    width: 8%;
-}
-
-.orderCell div:nth-child(2) {
-    width: 51%;
-}
-
-.orderCell div:nth-child(3) {
-    width: 22%;
-}
-
-.orderCell div:nth-child(4) {
-    width: 19%;
-}
-
-.orderCell div {
-    border-right: 0.1rem solid black;
-    border-bottom: 0.1rem solid black;
-}
-
-.orderCell span {
-    font-weight: 700;
-}
-
-.tableLast {
-    background-color: #ddd;
-}
-
-.orderCellTotal div:nth-child(2) {
-    width: 92%;
-}
-
-
-
-.drivingPrintrecord {
-    display: flex;
-    width: 100%;
-    height: 22rem;
-    font-size: 1.3rem;
-    text-align: center;
-}
-
-.drivingPrintrecordTable {
-    width: 50%;
-    height: 100%;
-}
-
-.drivingPrintrecordTable tr:nth-child(1) {
-    background-color: #ddd;
-}
-
-.drivingPrintrecordTable tr:nth-child(1) td {
-    border-top: 0.1rem solid black;
-}
-
-.drivingPrintrecordTable td {
-    border-right: 0.1rem solid black;
-    border-bottom: 0.1rem solid black;
-}
-
-.drivingPrintrecordTable td:nth-child(1) {
-    border-left: 0.1rem solid black;
-    width: 10%;
-}
-
-.drivingPrintrecordTable td:nth-child(2) {
-    width: 22%;
-}
-
-.drivingPrintrecordTable td:nth-child(3) {
-    width: 14%;
-}
-
-.drivingPrintrecordTable td:nth-child(4) {
-    width: 8%;
-}
-
-.drivingPrintrecordTable td:nth-child(5) {
-    width: 10%;
-}
-
-.drivingPrintrecordTable td:nth-child(6) {
-    width: 22%;
-}
-
-.drivingPrintrecordTable td:nth-child(7) {
-    width: 14%;
-}
-
-.tableHeight {
-    height: 2.4rem;
 }
 
 
 @page {
-    size: A4 landscape;
-    margin: 0;
-}
-
-@media print {
-    .adminTable tr:nth-child(1),
-    .tableHeader,
-    .dataCellHeader,
-    .noticeBoxTitle,
-    .tableLast, 
-    .drivingPrintrecordTable tr:nth-child(1) {
-        background-color: #ddd !important;
-        -webkit-print-color-adjust: exact;
-    }
+  size: A4;
+  margin: 0;
 }
