init: 기존 dev -> backup-dev로 변경하고 master에서 새로 dev 만듦

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <!-- <meta http-equiv="Cache-Control" content="private, no-cache, no-store, max-age=0, must-revalidate"> -->
-  <title>TRP</title>
+  <title>DEV</title>
   <link href="{% static 'css/setting/setting.css' %}" rel="stylesheet" type="text/css" />
   <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="{% static 'images/tilteIcon.png' %}">
@@ -29,7 +29,7 @@
       <!--sidemenuLogo-->
       <div class="logoBox">
         <a href="{% url 'home' %}" style="color: white; font-size: 5rem;">
-          <img src="{% static 'images/TRPlogo.png' %}" alt="">
+          <div>DEV</div>
         </a>
       </div>
 
